--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "^12.23.25",
     "langchain": "^1.1.5",
     "lucide-react": "^0.556.0",
-    "next": "16.0.8",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.449",
@@ -42,7 +42,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.8",
+    "eslint-config-next": "^16.1.1",
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
